add sorting news by date of publish

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -24,7 +24,7 @@ a:link,
 a:visited,
 a:hover,
 a:active {
-    color: #090;
+    color: #666;
     text-decoration: none;
     font-weight: bold;
 }
@@ -33,12 +33,6 @@ a:active {
     margin: 0;
     padding: 0;
     clear: both;
-}
-
-img {
-    border: 0 none;
-    width: 100px;
-    height: 100px;
 }
 
 button {
@@ -109,20 +103,24 @@ button {
 
 .left {
     position: fixed;
-    width: 20%;
+    width: 15%;
     float: left;
     line-height: 3;
 }
 
 .center {
-    margin-left: 22%;
+    margin-left: 17%;
     margin-right: 22%;
-    min-width: 52%;
+    min-width: 57%;
     min-height: calc(100vh - 190px);
     padding: 20px;
     float: left;
-    border-left: 4px double #090;
-    border-right: 4px double #090;
+    border-left: 4px double #666;
+    border-right: 4px double #666;
+}
+
+.center img{
+    width: 50%;
 }
 
 .right {
@@ -130,6 +128,12 @@ button {
     position: fixed;
     width: 20%;
     text-align: center;
+}
+
+.right img {
+    border: 0 none;
+    width: 100px;
+    height: 100px;
 }
 
 .footer {
