first upload on site

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -20,6 +20,12 @@ h1, h2, h3, h4, h5, h6 {
     color: #555;
 }
 
+.h1Appendix{
+    font-style: italic;
+    font-weight: normal;
+    font-size: .65em;
+}
+
 a:link,
 a:visited,
 a:hover,
@@ -118,8 +124,6 @@ button {
     border-left: 4px double #666;
     border-right: 4px double #666;
 }
-
-
 
 .newsItem{
     margin: 20px;
