add Year filter, add signIn/signOut module, refactor packages

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -5,11 +5,13 @@ body {
 
 .wrapper {
     background-color: #f7f7f7;
+    clear: both;
 }
 
 .container {
     padding: 10px;
     margin: 0 0 10px;
+    clear: both
 }
 
 .curved {
@@ -20,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #555;
 }
 
-.h1Appendix{
+.h1Appendix {
     font-style: italic;
     font-weight: normal;
     font-size: .65em;
@@ -38,7 +40,7 @@ a:active {
 .separator {
     margin: 0;
     padding: 0;
-    clear: both;
+    //clear: both;
 }
 
 button {
@@ -62,7 +64,8 @@ button {
     width: 600px;
 
 }
-.reg-table tr{
+
+.reg-table tr {
     height: 30px;
 }
 
@@ -71,26 +74,25 @@ button {
     border: 1px solid #999999;
 }
 
-.reg-input-short{
+.reg-input-short {
     width: 146px;
     border: 1px solid #999999;
 }
-
 
 .navigation {
     background: #eee url(/images/bg-nav.png) repeat-x top left;
     margin: 0 0 10px;
     padding: 0;
+    min-height: 40px;
 }
 
 .navigation span {
     float: left;
 }
 
-.navigation span a {
+.navigation span  {
     display: block;
     padding: 10px;
-    font-weight: bold;
     text-shadow: 1px 1px 1px #fff;
 }
 
@@ -125,17 +127,22 @@ button {
     border-right: 4px double #666;
 }
 
-.newsItem{
+.newsItem {
     margin: 20px;
     padding: 20px;
 }
-
-.newsItem img{
-    width: 100%;
+.favor{
+    width: 50px;
+    float: right;
+    border: solid 1px;
 }
 
-.lastUpdated{
-    font-size: .7em ;
+.newsItemImage img {
+     width: 100%;
+ }
+
+.lastUpdated {
+    font-size: .7em;
     font-style: italic;
     font-weight: normal;
 }
