--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .curved {
-    border-radius: 10px;
+    border-radius: 6px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -134,9 +134,9 @@ button {
 
 .favor {
     cursor: pointer;
-    width: 50px;
+    width: 100px;
     float: right;
-    border: solid 1px;
+    //border: solid 1px;
 }
 
 .newsItemImage img {
@@ -205,7 +205,7 @@ div#messages div {
     -khtml-border-radius: 5px;
     opacity: 0.65;
     background: #888;
-    font: normal 12px 'Georgia'
+    font: normal 14px 'Georgia'
 }
 
 div#messages div.error {
