--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -120,7 +120,7 @@ button {
     margin-left: 17%;
     margin-right: 22%;
     min-width: 57%;
-    min-height: calc(100vh - 190px);
+    min-height: calc(100vh - 180px);
     padding: 20px;
     float: left;
     border-left: 4px double #666;
@@ -150,7 +150,7 @@ button {
 }
 
 .right {
-    right: 1.5%;
+    right: 0.8%;
     position: fixed;
     width: 20%;
     text-align: center;
@@ -158,8 +158,9 @@ button {
 
 .right img {
     border: 0 none;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
+    padding: 3px;
 }
 
 .footer {
